# strings

./: .gitignore  A_prefix.cpp  B_KMP.cpp  CMakeLists.txt  C_Roulette.cpp  D_NSubstrings.cpp  E_String_from_prefix.cpp  F_Merge_and_encrypt.cpp  G_Z-function.cpp  H_Cubes.cpp  I_The_last_word.cpp  J_String_from_z.cpp  L_StringSet.cpp  M_Watermelon_lottery.cpp  N_MIPT-Telephony.cpp  Q_Aho_Corasick.cpp  R_Double_Agents.cpp
